# bagzel

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  launch-bagzel.sh
.github/workflows/: rosbags_build_check.yml
data/: BUILD.bazel  valid_rosbags.bzl  valid_rosbags_cluster.bzl
data/rosbags/2024-06-26_15-08-50_tas/: 2024-06-26-15-08-51_short.bag
data/rosbags/2025-04-28_itsc_albi_pemo_forest/: 2025-04-28-18-25-09_short.bag
docs/: bazel-profiling.md  cluster-deployment.md  declare-rosbag-artifacts.md  licensing-reuse.md  play-rosbag.md  update-python-deps.md
src/: BUILD.bazel
src/cpp/: BUILD.bazel
src/cpp/ros/: BUILD.bazel
src/cpp/ros/extractors/: BUILD.bazel  rosbag_to_images.cpp  rosbag_to_metadata.cpp  rosbag_to_oxts.cpp  rosbag_to_tf_trajectory.cpp  rosbag_to_transforms.cpp
src/cpp/ros/tools/: BUILD.bazel  project_trajectory_to_image.cpp  rosbag_filter.cpp  rosbag_filter_parallel.cpp  rosbag_info.cpp  rosbag_topic_filter.cpp  transform_trajectory.cpp
src/cpp/tools/: BUILD.bazel  images_to_sequence.cpp  merge_annotations.cpp
src/python/: BUILD
src/python/tools/: BUILD.bazel  gps_to_map.py  multi_gps_to_map.py  vis_seq_traj.py
src/starlark/macros/: declare_rosbag_artifacts.bzl
src/starlark/rules/core/: images_to_sequences.bzl  merge_annotations.bzl
src/starlark/rules/python/: oxts_to_maps.bzl  visualize_trajectory.bzl
src/starlark/rules/ros/extractors/: rosbag_to_images.bzl  rosbag_to_metadata.bzl  rosbag_to_oxts.bzl  rosbag_to_tf_trajectory.bzl  rosbag_to_transforms.bzl
src/starlark/rules/ros/tools/: filter_rosbags.bzl  project_trajectory_to_image.bzl  transform_trajectory.bzl
